# TOPPView-Lite

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.json
.github/workflows/: build-docker-images.yml  build-windows-executable-app.yaml  ci.yml
.streamlit/: config.toml
content/: upload.py  viewer.py  welcome.py
src/: __init__.py  cli.py  fileupload.py
src/common/: common.py
src/components/: __init__.py  factory.py
src/integration/: __init__.py  toppview_export.py
src/preprocessing/: __init__.py  component_inputs.py  extraction.py  identification.py  pipeline.py
tests/: conftest.py
tests/unit/: test_component_inputs.py  test_factory.py  test_identification.py
