[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toppview-lite"
version = "0.1.4"
description = "Interactive mass spectrometry data viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "OpenMS Team" },
]
keywords = ["mass spectrometry", "mzML", "proteomics", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "streamlit>=1.49.0",
    "streamlit-js-eval>=0.1.7",
    "pyopenms>=3.3.0",
    "pyopenms-viz>=1.0.0",
    "plotly>=5.22.0",
    "polars>=0.19.0",
    "openms-insight>=0.1.4",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "captcha>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pip-tools>=7.0.0",
]

[project.scripts]
toppview-lite = "src.cli:main"

[project.urls]
Homepage = "https://github.com/OpenMS/toppview-lite"
Documentation = "https://github.com/OpenMS/toppview-lite#readme"
Repository = "https://github.com/OpenMS/toppview-lite"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/content",
    "/assets",
    "/app.py",
    "/settings.json",
    "/default-parameters.json",
    "/README.md",
]
